--- a/main.css
+++ b/main.css
@@ -1,1 +1,19 @@
+body {
+	font-family: tahome;
+	height: 100vh;
+	min-height: 550px;
+	background-image: url("lake.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	overflow-y: hidden;
+}
+
+a {
+	text-decoration: none;
+	color: #444444;
+}
+
+
 
