--- a/main.css
+++ b/main.css
@@ -15,5 +15,16 @@ a {
 	color: #444444;
 }
 
-
+.login_reg_panel {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	text-align: center;
+	width: 70%;
+	right: 0;
+	left: 0;
+	margin: auto;
+	height: 400px;
+	background-color: rgba(30,30,30,0.9);
+}
 
