--- a/main.css
+++ b/main.css
@@ -34,8 +34,9 @@ a {
 	position: absolute;
 	top: -50px;
 	width: 50%;
-	right: calc(50% -50px);
+	right: calc(50% - 50px);
 	transition: .3s ease-in-out;
+	z-index: 0;
 }
 
 .login_reg_panel input[type="radio"] {
@@ -49,11 +50,97 @@ a {
 
 .login_reg_panel #label_login,
 .login_reg_panel #label_register {
-	border: 1px solid #939393;
+	border: 1px solid #9e9e9e;
 	padding: 0 5px;
 	width: 150px;
 	display: block;
 	text-align: center;
 	border-radius: 3px;
 	cursor: pointer;
+}
+
+.login_info_box {
+	width: 30%;
+	padding-left: 7%;
+	top: 30%;
+	left: 0;
+	position: absolute;
+	text-align: left; 
+}
+
+.register_info_box {
+	width: 30%;   
+	padding-right: 7%;
+	top: 30%;
+	right: 0;
+	position: absolute;
+	text-align: left; 
+}
+
+.right_log {right: 50px !important;}
+
+.login_show,
+.register_show {
+	z-index: 1;
+	display: none;
+	opacity: 0;
+	transition: 0.3s ease-in-out;
+	color: #242424;
+	text-align: left; 
+	padding: 50px;
+}
+
+.show_log_panel {
+	display: block;
+	opacity: 0.9;
+}
+
+.login_show input[type="text"], 
+.login_show input[type="password"] {
+	width: 100%;
+	display: block;
+	margin: 20px 0;
+	padding: 15px;
+	border: 1px solid #b5b5b5;
+	outline: none;
+}
+
+.login_show input[type="button"] {
+	max-width: 150px;
+	background: #444444;
+	color: #f9f9f9;
+	border: none;
+	padding: 10px;
+	text-transform: uppercase;
+	border-radius: 2px;
+	float: right;
+	cursor: pointer;
+}
+
+.login_show a {
+	display: inline-block;
+	padding: 10px 0;
+} 
+
+.register_show input[type="text"], 
+.register_show input[type="password"] {
+	width: 100%;
+	display: block;
+	margin: 20px 0;
+	padding: 15px;
+	border: 1px solid #b5b5b5;
+	outline: none;  
+}
+
+.register_show input[type="button"] {
+	max-width: 150px;
+    width: 100%;
+    background: #444444;
+    color: #f9f9f9;
+    border: none;
+    padding: 10px;
+    text-transform: uppercase;
+    border-radius: 2px;
+    float:right;
+    cursor:pointer;
 }
